--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mi-plugin-figma",
   "version": "1.0.0",
   "description": "Un plugin de Figma para Pronovias",
-  "main": "code.js",
+  "main": "src/remote/index.html",
   "scripts": {
     "start": "echo 'No start script defined'",
     "build": "echo 'No build script defined'"
