--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,11 +33,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Copy HTML file to root
+        run: |
+          mkdir -p public
+          cp ./src/remote/index.html public/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload entire repository
-          path: './src/remote/index.html'
+          path: "./public"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
