--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           mkdir -p public
           cp ./src/remote/index.html public/
+          cp ./src/remote/code.js public/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
